--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,8 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3.1.2
+      # - name: Setup Terraform
+      #   uses: hashicorp/setup-terraform@v3.1.2
 
       - name: Azure Login
         uses: azure/login@v2.1.0
@@ -71,8 +71,8 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3.1.2
+      # - name: Setup Terraform
+      #   uses: hashicorp/setup-terraform@v3.1.2
 
       - name: Azure Login
         uses: azure/login@v2.1.0
