--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,11 @@ jobs:
   plan:
     name: Terraform Plan (${{ inputs.environment }})
     runs-on: self-hosted
+    env:
+      ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+      ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+      ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+      ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
     defaults:
       run:
         working-directory: environments/${{ inputs.environment }}
@@ -28,17 +33,6 @@ jobs:
 
       # - name: Setup Terraform
       #   uses: hashicorp/setup-terraform@v3.1.2
-
-      - name: Azure Login
-        uses: azure/login@v2.1.0
-        with:
-          creds: >
-            {
-              "clientId": "${{ secrets.ARM_CLIENT_ID }}",
-              "clientSecret": "${{ secrets.ARM_CLIENT_SECRET }}",
-              "subscriptionId": "${{ secrets.ARM_SUBSCRIPTION_ID }}",
-              "tenantId": "${{ secrets.ARM_TENANT_ID }}"
-            }
 
       - name: Terraform Init
         run: terraform init
@@ -62,6 +56,11 @@ jobs:
     name: Terraform Apply (${{ inputs.environment }})
     needs: plan
     runs-on: self-hosted
+    env:
+      ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+      ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+      ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+      ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
     environment:
       name: ${{ inputs.environment }}
     defaults:
@@ -73,17 +72,6 @@ jobs:
 
       # - name: Setup Terraform
       #   uses: hashicorp/setup-terraform@v3.1.2
-
-      - name: Azure Login
-        uses: azure/login@v2.1.0
-        with:
-          creds: >
-            {
-              "clientId": "${{ secrets.ARM_CLIENT_ID }}",
-              "clientSecret": "${{ secrets.ARM_CLIENT_SECRET }}",
-              "subscriptionId": "${{ secrets.ARM_SUBSCRIPTION_ID }}",
-              "tenantId": "${{ secrets.ARM_TENANT_ID }}"
-            }
 
       - name: Terraform Init
         run: terraform init
