--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,19 +1,19 @@
 trigger: none
 
 pool: default
-
+# Test
 parameters:
   - name: environment
-    displayName: 'Target Environment'
+    displayName: "Target Environment"
     type: string
-    default: 'development'
+    default: "development"
     values:
       - development
       - production
 
 variables:
   - name: tf_working_dir
-    value: 'environments/${{ parameters.environment }}'
+    value: "environments/${{ parameters.environment }}"
 
 stages:
   - stage: Plan
@@ -23,27 +23,27 @@ stages:
           - task: TerraformInstaller@1
             displayName: Terraform Install
             inputs:
-              terraformVersion: 'latest'
+              terraformVersion: "latest"
           - task: TerraformTask@5
             displayName: Terraform Init
             inputs:
-              provider: 'azurerm'
-              command: 'init'
-              workingDirectory: '$(System.DefaultWorkingDirectory)/$(tf_working_dir)'
+              provider: "azurerm"
+              command: "init"
+              workingDirectory: "$(System.DefaultWorkingDirectory)/$(tf_working_dir)"
               backendAzureRmUseEntraIdForAuthentication: false
-              backendServiceArm: 'srvc'
-              backendAzureRmResourceGroupName: 'rg-rudra'
-              backendAzureRmStorageAccountName: 'todoappaccount'
-              backendAzureRmContainerName: 'tf-state-file'
-              backendAzureRmKey: '${{ parameters.environment }}/${{ parameters.environment }}.tfstate'
-              
+              backendServiceArm: "srvc"
+              backendAzureRmResourceGroupName: "rg-rudra"
+              backendAzureRmStorageAccountName: "todoappaccount"
+              backendAzureRmContainerName: "tf-state-file"
+              backendAzureRmKey: "${{ parameters.environment }}/${{ parameters.environment }}.tfstate"
+
           - task: TerraformTask@5
             displayName: Terraform Plan
             inputs:
-              provider: 'azurerm'
-              command: 'plan'
-              workingDirectory: '$(System.DefaultWorkingDirectory)/$(tf_working_dir)'
-              environmentServiceNameAzureRM: 'srvc'
+              provider: "azurerm"
+              command: "plan"
+              workingDirectory: "$(System.DefaultWorkingDirectory)/$(tf_working_dir)"
+              environmentServiceNameAzureRM: "srvc"
   - stage: Approval
     jobs:
       - job: Approval
@@ -51,8 +51,8 @@ stages:
         steps:
           - task: ManualValidation@1
             inputs:
-              notifyUsers: 'nilaysaxena94@gmail.com'
-  
+              notifyUsers: "nilaysaxena94@gmail.com"
+
   - stage: Deploy
     jobs:
       - job: Deploy
@@ -60,20 +60,20 @@ stages:
           - task: TerraformTask@5
             displayName: Terraform Init
             inputs:
-              provider: 'azurerm'
-              command: 'init'
-              workingDirectory: '$(System.DefaultWorkingDirectory)/$(tf_working_dir)'
+              provider: "azurerm"
+              command: "init"
+              workingDirectory: "$(System.DefaultWorkingDirectory)/$(tf_working_dir)"
               backendAzureRmUseEntraIdForAuthentication: false
-              backendServiceArm: 'srvc'
-              backendAzureRmResourceGroupName: 'rg-rudra'
-              backendAzureRmStorageAccountName: 'todoappaccount'
-              backendAzureRmContainerName: 'tf-state-file'
-              backendAzureRmKey: '${{ parameters.environment }}/${{ parameters.environment }}.tfstate'
-              
+              backendServiceArm: "srvc"
+              backendAzureRmResourceGroupName: "rg-rudra"
+              backendAzureRmStorageAccountName: "todoappaccount"
+              backendAzureRmContainerName: "tf-state-file"
+              backendAzureRmKey: "${{ parameters.environment }}/${{ parameters.environment }}.tfstate"
+
           - task: TerraformTask@5
             inputs:
-              provider: 'azurerm'
-              command: 'apply'
-              commandOptions: '--auto-approve'
-              environmentServiceNameAzureRM: 'srvc'
-              workingDirectory: '$(System.DefaultWorkingDirectory)/$(tf_working_dir)'
+              provider: "azurerm"
+              command: "apply"
+              commandOptions: "--auto-approve"
+              environmentServiceNameAzureRM: "srvc"
+              workingDirectory: "$(System.DefaultWorkingDirectory)/$(tf_working_dir)"
