--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,17 +19,22 @@ jobs:
   plan:
     name: Terraform Plan (${{ inputs.environment }})
     runs-on: self-hosted
-    env:
-      ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-      ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-      ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-      ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+    # env:
+    #   ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+    #   ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+    #   ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+    #   ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
     defaults:
       run:
         working-directory: environments/${{ inputs.environment }}
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v4  
+
+      - name: Azure Login
+        uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       # - name: Setup Terraform
       #   uses: hashicorp/setup-terraform@v3.1.2
