--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ permissions:
 jobs:
   plan:
     name: Terraform Plan (${{ inputs.environment }})
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     # env:
     #   ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
     #   ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
