--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ permissions:
 jobs:
   plan:
     name: Terraform Plan (${{ inputs.environment }})
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     # env:
     #   ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
     #   ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
@@ -31,13 +31,13 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4  
 
-      - name: Azure Login
-        uses: azure/login@v2
-        with:
-          creds: ${{ secrets.AZURE_CREDENSTIALS }}
+      # - name: Azure Login
+      #   uses: azure/login@v2
+      #   with:
+      #     creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3.1.2
+      # - name: Setup Terraform
+      #   uses: hashicorp/setup-terraform@v3.1.2
 
       - name: Terraform Init
         run: terraform init
