--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,81 +1,37 @@
-trigger: none
+trigger:
+- main
 
-pool: default
+pool:
+  vmImage: 'ubuntu-latest'
 
-# Test 123 Rudra Saxena Bhavya
+steps:
+  - task: NodeTool@0
+    inputs:
+      versionSource: 'spec'
+      versionSpec: '18.x'
 
-parameters:
-  - name: environment
-    displayName: "Target Environment"
-    type: string
-    default: "development"
-    values:
-      - development
-      - production
+  - script: |
+      npm install
+    displayName: 'Install NPM dependencies'
 
-variables:
-  - name: tf_working_dir
-    value: "environments/${{ parameters.environment }}"
+  - task: SonarQubePrepare@7
+    inputs:
+      SonarQube: 'Sonarqube'
+      scannerMode: 'cli'
+      configMode: 'manual'
+      cliProjectKey: 'todo-project'
+      cliProjectName: 'todo-project'
+      cliSources: '.'
 
-stages:
-  - stage: Plan
-    jobs:
-      - job: Plan
-        steps:
-          - task: TerraformInstaller@1
-            displayName: Terraform Install
-            inputs:
-              terraformVersion: "latest"
-          - task: TerraformTask@5
-            displayName: Terraform Init
-            inputs:
-              provider: "azurerm"
-              command: "init"
-              workingDirectory: "$(System.DefaultWorkingDirectory)/$(tf_working_dir)"
-              backendAzureRmUseEntraIdForAuthentication: false
-              backendServiceArm: "srvc"
-              backendAzureRmResourceGroupName: "rg-rudra"
-              backendAzureRmStorageAccountName: "todoappaccount"
-              backendAzureRmContainerName: "tf-state-file"
-              backendAzureRmKey: "${{ parameters.environment }}/${{ parameters.environment }}.tfstate"
+  - task: SonarQubeAnalyze@7
+    inputs:
+      jdkversion: 'JAVA_HOME_17_X64'
 
-          - task: TerraformTask@5
-            displayName: Terraform Plan
-            inputs:
-              provider: "azurerm"
-              command: "plan"
-              workingDirectory: "$(System.DefaultWorkingDirectory)/$(tf_working_dir)"
-              environmentServiceNameAzureRM: "srvc"
-  - stage: Approval
-    jobs:
-      - job: Approval
-        pool: server
-        steps:
-          - task: ManualValidation@1
-            inputs:
-              notifyUsers: "nilaysaxena94@gmail.com"
+  - task: SonarQubePublish@7
+    inputs:
+      pollingTimeoutSec: '300'
 
-  - stage: Deploy
-    jobs:
-      - job: Deploy
-        steps:
-          - task: TerraformTask@5
-            displayName: Terraform Init
-            inputs:
-              provider: "azurerm"
-              command: "init"
-              workingDirectory: "$(System.DefaultWorkingDirectory)/$(tf_working_dir)"
-              backendAzureRmUseEntraIdForAuthentication: false
-              backendServiceArm: "srvc"
-              backendAzureRmResourceGroupName: "rg-rudra"
-              backendAzureRmStorageAccountName: "todoappaccount"
-              backendAzureRmContainerName: "tf-state-file"
-              backendAzureRmKey: "${{ parameters.environment }}/${{ parameters.environment }}.tfstate"
-
-          - task: TerraformTask@5
-            inputs:
-              provider: "azurerm"
-              command: "apply"
-              commandOptions: "--auto-approve"
-              environmentServiceNameAzureRM: "srvc"
-              workingDirectory: "$(System.DefaultWorkingDirectory)/$(tf_working_dir)"
+  - task: Npm@1
+    inputs:
+      command: 'custom'
+      customCommand: 'run build'
