Make environment input optional in Terraform workflow and set default to development; comment out load balancer output in development environment

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,8 @@ on:
     inputs:
       environment:
         description: 'Select environment to deploy'
-        required: true
+        required: false
+        default: development
         type: choice
         options:
           - development
