Update Infracost step to use 'infracost diff' for cost summary publication

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,10 +73,10 @@ jobs:
             --format json \
             --out-file infracost.json
 
-      - name: Publish Infracost cost summary
+      - name: Publish Infracost summary
         run: |
-          infracost breakdown \
-            --path . \
+          infracost diff \
+            --path infracost.json \
             --format github-actions-summary
 
   apply:
