Add Infracost setup step to Terraform workflow for cost estimation

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,6 +62,10 @@ jobs:
           name: tfplan
           path: environments/${{ inputs.environment }}/tfplan
 
+      # ---------------- Infracost ----------------
+      - name: Setup Infracost
+        uses: infracost/actions/setup@v3
+
       - name: Generate Infracost breakdown
         run: |
           infracost breakdown \
@@ -81,7 +85,7 @@ jobs:
           echo "## 💰 Infracost Cost Estimate" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           cat infracost-diff.txt >> $GITHUB_STEP_SUMMARY
-          
+
   apply:
     name: Terraform Apply (${{ inputs.environment }})
     needs: plan
